# buddhaland

./: Cargo.toml  佛境文档.md
.cursor/rules/: my-cursor-rule.mdc
.trae/rules/: project_rules.md
pallets/commemorate/: Cargo.toml  README.md
pallets/commemorate/src/: lib.rs
pallets/exchange/: Cargo.toml  README.md
pallets/exchange/src/: lib.rs
pallets/karma/: Cargo.toml  README.md
pallets/karma/src/: lib.rs  weights.rs
pallets/meditation/: Cargo.toml  README.md
pallets/meditation/src/: lib.rs
pallets/paymaster/: Cargo.toml  README.md
pallets/paymaster/src/: lib.rs
pallets/prayer/: Cargo.toml  README.md
pallets/prayer/src/: lib.rs
pallets/reward/: Cargo.toml  README.md
pallets/reward/src/: lib.rs
pallets/ritual/: Cargo.toml  README.md
pallets/ritual/src/: lib.rs
pallets/share-mining/: Cargo.toml  README.md
pallets/share-mining/src/: lib.rs  lib.rs.backup
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/configs/: mod.rs
