[package]
name = "pallet-exchange"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
authors = ["BuddhaLand"]

[lib]
name = "pallet_exchange"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-karma/std",
    "pallet-paymaster/std",
    "pallet-share-mining/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-karma/runtime-benchmarks",
    "pallet-paymaster/runtime-benchmarks",
    "pallet-share-mining/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-karma/try-runtime",
    "pallet-paymaster/try-runtime",
    "pallet-share-mining/try-runtime",
]

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-std = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, optional = true, default-features = false }
# 依赖balances pallet进行BUD代币转账
pallet-balances = { workspace = true, default-features = false }
# 依赖karma pallet进行karma发放
pallet-karma = { path = "../karma", default-features = false }
# 依赖paymaster pallet进行托管池充值
pallet-paymaster = { path = "../paymaster", default-features = false }
# 依赖share-mining pallet进行奖金池充值
pallet-share-mining = { path = "../share-mining", default-features = false }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }