[package]
name = "pallet-paymaster"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
authors = ["BuddhaLand"]
description = "Paymaster pallet for paying gas fees using BUD from Karma exchange"

[lib]
name = "pallet_paymaster"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-karma/std",
    "pallet-exchange/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-karma/runtime-benchmarks",
    "pallet-exchange/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-karma/try-runtime",
    "pallet-exchange/try-runtime",
]

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-std = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, optional = true, default-features = false }

# Pallet dependencies
pallet-balances = { workspace = true, default-features = false }
pallet-karma = { path = "../karma", default-features = false }
pallet-exchange = { path = "../exchange", default-features = false }