[package]
name = "pallet-share-mining"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["BuddhaLand Contributors"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

sp-std = { version = "11", default-features = false }
sp-runtime = { workspace = true, default-features = false, features = ["serde"] }
sp-io = { workspace = true, default-features = false }

frame-support = { workspace = true, default-features = false, features = ["experimental"] }
frame-system = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, default-features = false, optional = true }

# 可选：用于 offchain http
sp-core = { workspace = true, default-features = false }

[dev-dependencies]
sp-core = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking?/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]